P5_optativo2/Lex_y_Yacc/y.output
Estado 153 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 $@1: %empty

    2 Programa: Cabecera_programa $@1 bloque

    3 $@2: %empty

    4 $@3: %empty

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque

    6 Declar_subprogs: Declar_subprogs Declar_subprog
    7                | %empty

    8 $@4: %empty

    9 $@5: %empty

   10 Declar_subprog: $@4 Cabecera_subprog $@5 bloque

   11 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables
   12                            | %empty

   13 Marca_ini_declar_variables: INIDEC

   14 Marca_fin_declar_variables: FINDEC

   15 Cabecera_programa: MAIN

   16 Inicio_de_bloque: LLAIZQ

   17 Fin_de_bloque: LLADER

   18 Variables_locales: Variables_locales Cuerpo_declar_variables
   19                  | Cuerpo_declar_variables

   20 $@6: %empty

   21 Cuerpo_declar_variables: tipo $@6 lista_declaracion_variables PYC
   22                        | error

   23 Cabecera_subprog: tipo variable PARIZQ argumentos PARDER
   24                 | tipo variable PARIZQ PARDER

   25 $@7: %empty

   26 argumentos: tipo $@7 variable

   27 $@8: %empty

   28 argumentos: argumentos COMA tipo $@8 variable
   29           | error

   30 variable: identificador
   31         | elemento_de_array_decl

   32 elemento_de_array_decl: identificador CORIZQ CONSTENT CORDER
   33                       | identificador CORIZQ CONSTENT COMA CONSTENT CORDER

   34 variable_expresion: identificador
   35                   | elemento_de_array

   36 elemento_de_array: identificador CORIZQ expresion CORDER
   37                  | identificador CORIZQ expresion COMA expresion CORDER

   38 Sentencias: Sentencias Sentencia
   39           | Sentencia

   40 Sentencia: bloque
   41          | sentencia_asignacion
   42          | sentencia_si
   43          | sentencia_mientras
   44          | sentencia_hacer_hasta
   45          | sentencia_entrada
   46          | sentencia_salida
   47          | sentencia_retornar

   48 sentencia_asignacion: variable_expresion ASIG expresion PYC
   49                     | error

   50 sentencia_si: SI PARIZQ expresion PARDER Sentencia
   51             | SI PARIZQ expresion PARDER Sentencia SINO Sentencia

   52 sentencia_mientras: MIENTRAS PARIZQ expresion PARDER Sentencia

   53 sentencia_hacer_hasta: HACER Sentencia HASTA PARIZQ expresion PARDER PYC

   54 sentencia_entrada: ENTRADA lista_variables PYC

   55 sentencia_salida: SALIDA lista_expresiones_cadena PYC

   56 sentencia_retornar: DEVOLVER expresion PYC

   57 lista_expresiones_cadena: lista_expresiones_cadena COMA expresion_cadena
   58                         | expresion_cadena

   59 expresion_cadena: expresion
   60                 | cadena

   61 lista_variables: variable
   62                | lista_variables COMA variable

   63 lista_declaracion_variables: variable
   64                            | lista_declaracion_variables COMA variable
   65                            | error

   66 lista_expresiones: expresion
   67                  | lista_expresiones COMA expresion

   68 expresion: PARIZQ expresion PARDER
   69          | OPNEG expresion
   70          | OPSUMA expresion
   71          | OPRESTA expresion
   72          | expresion OPMULT expresion
   73          | expresion OPDIV expresion
   74          | expresion OPMULTM expresion
   75          | expresion OPAND expresion
   76          | expresion OPOR expresion
   77          | expresion OPEQ expresion
   78          | expresion OPNEQ expresion
   79          | expresion OPLEQ expresion
   80          | expresion OPGEQ expresion
   81          | expresion OPLESS expresion
   82          | expresion OPGR expresion
   83          | expresion OPMOD expresion
   84          | expresion OPSUMA expresion
   85          | expresion OPRESTA expresion
   86          | variable_expresion
   87          | constante
   88          | funcion
   89          | error

   90 funcion: identificador PARIZQ PARDER

   91 $@9: %empty

   92 funcion: identificador PARIZQ $@9 lista_expresiones PARDER

   93 tipo: TIPOEL

   94 cadena: CADENA

   95 identificador: IDEN

   96 constante: CONST
   97          | CONSTENT
   98          | CORIZQ ini_elementos_array CORDER

   99 ini_elementos_array: ini_elementos_array PYC lista_expresiones_array
  100                    | lista_expresiones_array

  101 lista_expresiones_array: expresion
  102                        | lista_expresiones_array COMA expresion


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 22 29 49 65 89
    OPOR (258) 76
    OPAND (259) 75
    OPEQ (260) 77
    OPNEQ (261) 78
    OPLEQ (262) 79
    OPGEQ (263) 80
    OPLESS (264) 81
    OPGR (265) 82
    OPSUMA (266) 70 84
    OPRESTA (267) 71 85
    OPMULT (268) 72
    OPMULTM (269) 74
    OPDIV (270) 73
    OPMOD (271) 83
    OPNEG (272) 69
    CONST (273) 96
    CONSTENT (274) 32 33 97
    IDEN (275) 95
    CADENA (276) 94
    ASIG (277) 48
    CORIZQ (278) 32 33 36 37 98
    CORDER (279) 32 33 36 37 98
    PARIZQ (280) 23 24 50 51 52 53 68 90 92
    PARDER (281) 23 24 50 51 52 53 68 90 92
    LLAIZQ (282) 16
    LLADER (283) 17
    PYC (284) 21 48 53 54 55 56 99
    COMA (285) 28 33 37 57 62 64 67 102
    SI (286) 50 51
    SINO (287) 51
    MIENTRAS (288) 52
    HACER (289) 53
    HASTA (290) 53
    INIDEC (291) 13
    FINDEC (292) 14
    SALIDA (293) 55
    ENTRADA (294) 54
    DEVOLVER (295) 56
    MAIN (296) 15
    TIPOEL (297) 93


No terminales con las reglas donde aparecen

    $accept (43)
        on left: 0
    Programa (44)
        on left: 2
        on right: 0
    $@1 (45)
        on left: 1
        on right: 2
    bloque (46)
        on left: 5
        on right: 2 10 40
    $@2 (47)
        on left: 3
        on right: 5
    $@3 (48)
        on left: 4
        on right: 5
    Declar_subprogs (49)
        on left: 6 7
        on right: 5 6
    Declar_subprog (50)
        on left: 10
        on right: 6
    $@4 (51)
        on left: 8
        on right: 10
    $@5 (52)
        on left: 9
        on right: 10
    Declar_de_variables_locales (53)
        on left: 11 12
        on right: 5
    Marca_ini_declar_variables (54)
        on left: 13
        on right: 11
    Marca_fin_declar_variables (55)
        on left: 14
        on right: 11
    Cabecera_programa (56)
        on left: 15
        on right: 2
    Inicio_de_bloque (57)
        on left: 16
        on right: 5
    Fin_de_bloque (58)
        on left: 17
        on right: 5
    Variables_locales (59)
        on left: 18 19
        on right: 11 18
    Cuerpo_declar_variables (60)
        on left: 21 22
        on right: 18 19
    $@6 (61)
        on left: 20
        on right: 21
    Cabecera_subprog (62)
        on left: 23 24
        on right: 10
    argumentos (63)
        on left: 26 28 29
        on right: 23 28
    $@7 (64)
        on left: 25
        on right: 26
    $@8 (65)
        on left: 27
        on right: 28
    variable (66)
        on left: 30 31
        on right: 23 24 26 28 61 62 63 64
    elemento_de_array_decl (67)
        on left: 32 33
        on right: 31
    variable_expresion (68)
        on left: 34 35
        on right: 48 86
    elemento_de_array (69)
        on left: 36 37
        on right: 35
    Sentencias (70)
        on left: 38 39
        on right: 5 38
    Sentencia (71)
        on left: 40 41 42 43 44 45 46 47
        on right: 38 39 50 51 52 53
    sentencia_asignacion (72)
        on left: 48 49
        on right: 41
    sentencia_si (73)
        on left: 50 51
        on right: 42
    sentencia_mientras (74)
        on left: 52
        on right: 43
    sentencia_hacer_hasta (75)
        on left: 53
        on right: 44
    sentencia_entrada (76)
        on left: 54
        on right: 45
    sentencia_salida (77)
        on left: 55
        on right: 46
    sentencia_retornar (78)
        on left: 56
        on right: 47
    lista_expresiones_cadena (79)
        on left: 57 58
        on right: 55 57
    expresion_cadena (80)
        on left: 59 60
        on right: 57 58
    lista_variables (81)
        on left: 61 62
        on right: 54 62
    lista_declaracion_variables (82)
        on left: 63 64 65
        on right: 21 64
    lista_expresiones (83)
        on left: 66 67
        on right: 67 92
    expresion (84)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
        on right: 36 37 48 50 51 52 53 56 59 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 101 102
    funcion (85)
        on left: 90 92
        on right: 88
    $@9 (86)
        on left: 91
        on right: 92
    tipo (87)
        on left: 93
        on right: 21 23 24 26 28
    cadena (88)
        on left: 94
        on right: 60
    identificador (89)
        on left: 95
        on right: 30 32 33 34 36 37 90 92
    constante (90)
        on left: 96 97 98
        on right: 87
    ini_elementos_array (91)
        on left: 99 100
        on right: 98 99
    lista_expresiones_array (92)
        on left: 101 102
        on right: 99 100 102


Estado 0

    0 $accept: . Programa $end

    MAIN  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

   15 Cabecera_programa: MAIN .

    $default  reduce usando la regla 15 (Cabecera_programa)


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    2 Programa: Cabecera_programa . $@1 bloque

    $default  reduce usando la regla 1 ($@1)

    $@1  ir al estado 5


Estado 4

    0 $accept: Programa $end .

    $default  aceptar


Estado 5

    2 Programa: Cabecera_programa $@1 . bloque

    LLAIZQ  desplazar e ir al estado 6

    bloque            ir al estado 7
    Inicio_de_bloque  ir al estado 8


Estado 6

   16 Inicio_de_bloque: LLAIZQ .

    $default  reduce usando la regla 16 (Inicio_de_bloque)


Estado 7

    2 Programa: Cabecera_programa $@1 bloque .

    $default  reduce usando la regla 2 (Programa)


Estado 8

    5 bloque: Inicio_de_bloque . $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 9


Estado 9

    5 bloque: Inicio_de_bloque $@2 . Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque

    INIDEC  desplazar e ir al estado 10

    $default  reduce usando la regla 12 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 11
    Marca_ini_declar_variables   ir al estado 12


Estado 10

   13 Marca_ini_declar_variables: INIDEC .

    $default  reduce usando la regla 13 (Marca_ini_declar_variables)


Estado 11

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales . $@3 Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 4 ($@3)

    $@3  ir al estado 13


Estado 12

   11 Declar_de_variables_locales: Marca_ini_declar_variables . Variables_locales Marca_fin_declar_variables

    error   desplazar e ir al estado 14
    TIPOEL  desplazar e ir al estado 15

    Variables_locales        ir al estado 16
    Cuerpo_declar_variables  ir al estado 17
    tipo                     ir al estado 18


Estado 13

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 . Declar_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 7 (Declar_subprogs)

    Declar_subprogs  ir al estado 19


Estado 14

   22 Cuerpo_declar_variables: error .

    $default  reduce usando la regla 22 (Cuerpo_declar_variables)


Estado 15

   93 tipo: TIPOEL .

    $default  reduce usando la regla 93 (tipo)


Estado 16

   11 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales . Marca_fin_declar_variables
   18 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error   desplazar e ir al estado 14
    FINDEC  desplazar e ir al estado 20
    TIPOEL  desplazar e ir al estado 15

    Marca_fin_declar_variables  ir al estado 21
    Cuerpo_declar_variables     ir al estado 22
    tipo                        ir al estado 18


Estado 17

   19 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 19 (Variables_locales)


Estado 18

   21 Cuerpo_declar_variables: tipo . $@6 lista_declaracion_variables PYC

    $default  reduce usando la regla 20 ($@6)

    $@6  ir al estado 23


Estado 19

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs . Sentencias Fin_de_bloque
    6 Declar_subprogs: Declar_subprogs . Declar_subprog

    error     desplazar e ir al estado 24
    IDEN      desplazar e ir al estado 25
    LLAIZQ    desplazar e ir al estado 6
    SI        desplazar e ir al estado 26
    MIENTRAS  desplazar e ir al estado 27
    HACER     desplazar e ir al estado 28
    SALIDA    desplazar e ir al estado 29
    ENTRADA   desplazar e ir al estado 30
    DEVOLVER  desplazar e ir al estado 31

    TIPOEL  reduce usando la regla 8 ($@4)

    bloque                 ir al estado 32
    Declar_subprog         ir al estado 33
    $@4                    ir al estado 34
    Inicio_de_bloque       ir al estado 8
    variable_expresion     ir al estado 35
    elemento_de_array      ir al estado 36
    Sentencias             ir al estado 37
    Sentencia              ir al estado 38
    sentencia_asignacion   ir al estado 39
    sentencia_si           ir al estado 40
    sentencia_mientras     ir al estado 41
    sentencia_hacer_hasta  ir al estado 42
    sentencia_entrada      ir al estado 43
    sentencia_salida       ir al estado 44
    sentencia_retornar     ir al estado 45
    identificador          ir al estado 46


Estado 20

   14 Marca_fin_declar_variables: FINDEC .

    $default  reduce usando la regla 14 (Marca_fin_declar_variables)


Estado 21

   11 Declar_de_variables_locales: Marca_ini_declar_variables Variables_locales Marca_fin_declar_variables .

    $default  reduce usando la regla 11 (Declar_de_variables_locales)


Estado 22

   18 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 18 (Variables_locales)


Estado 23

   21 Cuerpo_declar_variables: tipo $@6 . lista_declaracion_variables PYC

    error  desplazar e ir al estado 47
    IDEN   desplazar e ir al estado 25

    variable                     ir al estado 48
    elemento_de_array_decl       ir al estado 49
    lista_declaracion_variables  ir al estado 50
    identificador                ir al estado 51


Estado 24

   49 sentencia_asignacion: error .

    $default  reduce usando la regla 49 (sentencia_asignacion)


Estado 25

   95 identificador: IDEN .

    $default  reduce usando la regla 95 (identificador)


Estado 26

   50 sentencia_si: SI . PARIZQ expresion PARDER Sentencia
   51             | SI . PARIZQ expresion PARDER Sentencia SINO Sentencia

    PARIZQ  desplazar e ir al estado 52


Estado 27

   52 sentencia_mientras: MIENTRAS . PARIZQ expresion PARDER Sentencia

    PARIZQ  desplazar e ir al estado 53


Estado 28

   53 sentencia_hacer_hasta: HACER . Sentencia HASTA PARIZQ expresion PARDER PYC

    error     desplazar e ir al estado 24
    IDEN      desplazar e ir al estado 25
    LLAIZQ    desplazar e ir al estado 6
    SI        desplazar e ir al estado 26
    MIENTRAS  desplazar e ir al estado 27
    HACER     desplazar e ir al estado 28
    SALIDA    desplazar e ir al estado 29
    ENTRADA   desplazar e ir al estado 30
    DEVOLVER  desplazar e ir al estado 31

    bloque                 ir al estado 32
    Inicio_de_bloque       ir al estado 8
    variable_expresion     ir al estado 35
    elemento_de_array      ir al estado 36
    Sentencia              ir al estado 54
    sentencia_asignacion   ir al estado 39
    sentencia_si           ir al estado 40
    sentencia_mientras     ir al estado 41
    sentencia_hacer_hasta  ir al estado 42
    sentencia_entrada      ir al estado 43
    sentencia_salida       ir al estado 44
    sentencia_retornar     ir al estado 45
    identificador          ir al estado 46


Estado 29

   55 sentencia_salida: SALIDA . lista_expresiones_cadena PYC

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CADENA    desplazar e ir al estado 61
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion        ir al estado 64
    elemento_de_array         ir al estado 36
    lista_expresiones_cadena  ir al estado 65
    expresion_cadena          ir al estado 66
    expresion                 ir al estado 67
    funcion                   ir al estado 68
    cadena                    ir al estado 69
    identificador             ir al estado 70
    constante                 ir al estado 71


Estado 30

   54 sentencia_entrada: ENTRADA . lista_variables PYC

    IDEN  desplazar e ir al estado 25

    variable                ir al estado 72
    elemento_de_array_decl  ir al estado 49
    lista_variables         ir al estado 73
    identificador           ir al estado 51


Estado 31

   56 sentencia_retornar: DEVOLVER . expresion PYC

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 74
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 32

   40 Sentencia: bloque .

    $default  reduce usando la regla 40 (Sentencia)


Estado 33

    6 Declar_subprogs: Declar_subprogs Declar_subprog .

    $default  reduce usando la regla 6 (Declar_subprogs)


Estado 34

   10 Declar_subprog: $@4 . Cabecera_subprog $@5 bloque

    TIPOEL  desplazar e ir al estado 15

    Cabecera_subprog  ir al estado 75
    tipo              ir al estado 76


Estado 35

   48 sentencia_asignacion: variable_expresion . ASIG expresion PYC

    ASIG  desplazar e ir al estado 77


Estado 36

   35 variable_expresion: elemento_de_array .

    $default  reduce usando la regla 35 (variable_expresion)


Estado 37

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias . Fin_de_bloque
   38 Sentencias: Sentencias . Sentencia

    error     desplazar e ir al estado 24
    IDEN      desplazar e ir al estado 25
    LLAIZQ    desplazar e ir al estado 6
    LLADER    desplazar e ir al estado 78
    SI        desplazar e ir al estado 26
    MIENTRAS  desplazar e ir al estado 27
    HACER     desplazar e ir al estado 28
    SALIDA    desplazar e ir al estado 29
    ENTRADA   desplazar e ir al estado 30
    DEVOLVER  desplazar e ir al estado 31

    bloque                 ir al estado 32
    Inicio_de_bloque       ir al estado 8
    Fin_de_bloque          ir al estado 79
    variable_expresion     ir al estado 35
    elemento_de_array      ir al estado 36
    Sentencia              ir al estado 80
    sentencia_asignacion   ir al estado 39
    sentencia_si           ir al estado 40
    sentencia_mientras     ir al estado 41
    sentencia_hacer_hasta  ir al estado 42
    sentencia_entrada      ir al estado 43
    sentencia_salida       ir al estado 44
    sentencia_retornar     ir al estado 45
    identificador          ir al estado 46


Estado 38

   39 Sentencias: Sentencia .

    $default  reduce usando la regla 39 (Sentencias)


Estado 39

   41 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 41 (Sentencia)


Estado 40

   42 Sentencia: sentencia_si .

    $default  reduce usando la regla 42 (Sentencia)


Estado 41

   43 Sentencia: sentencia_mientras .

    $default  reduce usando la regla 43 (Sentencia)


Estado 42

   44 Sentencia: sentencia_hacer_hasta .

    $default  reduce usando la regla 44 (Sentencia)


Estado 43

   45 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 45 (Sentencia)


Estado 44

   46 Sentencia: sentencia_salida .

    $default  reduce usando la regla 46 (Sentencia)


Estado 45

   47 Sentencia: sentencia_retornar .

    $default  reduce usando la regla 47 (Sentencia)


Estado 46

   34 variable_expresion: identificador .
   36 elemento_de_array: identificador . CORIZQ expresion CORDER
   37                  | identificador . CORIZQ expresion COMA expresion CORDER

    CORIZQ  desplazar e ir al estado 81

    $default  reduce usando la regla 34 (variable_expresion)


Estado 47

   65 lista_declaracion_variables: error .

    $default  reduce usando la regla 65 (lista_declaracion_variables)


Estado 48

   63 lista_declaracion_variables: variable .

    $default  reduce usando la regla 63 (lista_declaracion_variables)


Estado 49

   31 variable: elemento_de_array_decl .

    $default  reduce usando la regla 31 (variable)


Estado 50

   21 Cuerpo_declar_variables: tipo $@6 lista_declaracion_variables . PYC
   64 lista_declaracion_variables: lista_declaracion_variables . COMA variable

    PYC   desplazar e ir al estado 82
    COMA  desplazar e ir al estado 83


Estado 51

   30 variable: identificador .
   32 elemento_de_array_decl: identificador . CORIZQ CONSTENT CORDER
   33                       | identificador . CORIZQ CONSTENT COMA CONSTENT CORDER

    CORIZQ  desplazar e ir al estado 84

    $default  reduce usando la regla 30 (variable)


Estado 52

   50 sentencia_si: SI PARIZQ . expresion PARDER Sentencia
   51             | SI PARIZQ . expresion PARDER Sentencia SINO Sentencia

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 85
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 53

   52 sentencia_mientras: MIENTRAS PARIZQ . expresion PARDER Sentencia

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 86
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 54

   53 sentencia_hacer_hasta: HACER Sentencia . HASTA PARIZQ expresion PARDER PYC

    HASTA  desplazar e ir al estado 87


Estado 55

   89 expresion: error .

    $default  reduce usando la regla 89 (expresion)


Estado 56

   70 expresion: OPSUMA . expresion

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 88
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 57

   71 expresion: OPRESTA . expresion

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 89
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 58

   69 expresion: OPNEG . expresion

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 90
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 59

   96 constante: CONST .

    $default  reduce usando la regla 96 (constante)


Estado 60

   97 constante: CONSTENT .

    $default  reduce usando la regla 97 (constante)


Estado 61

   94 cadena: CADENA .

    $default  reduce usando la regla 94 (cadena)


Estado 62

   98 constante: CORIZQ . ini_elementos_array CORDER

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion       ir al estado 64
    elemento_de_array        ir al estado 36
    expresion                ir al estado 91
    funcion                  ir al estado 68
    identificador            ir al estado 70
    constante                ir al estado 71
    ini_elementos_array      ir al estado 92
    lista_expresiones_array  ir al estado 93


Estado 63

   68 expresion: PARIZQ . expresion PARDER

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 94
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 64

   86 expresion: variable_expresion .

    $default  reduce usando la regla 86 (expresion)


Estado 65

   55 sentencia_salida: SALIDA lista_expresiones_cadena . PYC
   57 lista_expresiones_cadena: lista_expresiones_cadena . COMA expresion_cadena

    PYC   desplazar e ir al estado 95
    COMA  desplazar e ir al estado 96


Estado 66

   58 lista_expresiones_cadena: expresion_cadena .

    $default  reduce usando la regla 58 (lista_expresiones_cadena)


Estado 67

   59 expresion_cadena: expresion .
   72 expresion: expresion . OPMULT expresion
   73          | expresion . OPDIV expresion
   74          | expresion . OPMULTM expresion
   75          | expresion . OPAND expresion
   76          | expresion . OPOR expresion
   77          | expresion . OPEQ expresion
   78          | expresion . OPNEQ expresion
   79          | expresion . OPLEQ expresion
   80          | expresion . OPGEQ expresion
   81          | expresion . OPLESS expresion
   82          | expresion . OPGR expresion
   83          | expresion . OPMOD expresion
   84          | expresion . OPSUMA expresion
   85          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 97
    OPAND    desplazar e ir al estado 98
    OPEQ     desplazar e ir al estado 99
    OPNEQ    desplazar e ir al estado 100
    OPLEQ    desplazar e ir al estado 101
    OPGEQ    desplazar e ir al estado 102
    OPLESS   desplazar e ir al estado 103
    OPGR     desplazar e ir al estado 104
    OPSUMA   desplazar e ir al estado 105
    OPRESTA  desplazar e ir al estado 106
    OPMULT   desplazar e ir al estado 107
    OPMULTM  desplazar e ir al estado 108
    OPDIV    desplazar e ir al estado 109
    OPMOD    desplazar e ir al estado 110

    $default  reduce usando la regla 59 (expresion_cadena)


Estado 68

   88 expresion: funcion .

    $default  reduce usando la regla 88 (expresion)


Estado 69

   60 expresion_cadena: cadena .

    $default  reduce usando la regla 60 (expresion_cadena)


Estado 70

   34 variable_expresion: identificador .
   36 elemento_de_array: identificador . CORIZQ expresion CORDER
   37                  | identificador . CORIZQ expresion COMA expresion CORDER
   90 funcion: identificador . PARIZQ PARDER
   92        | identificador . PARIZQ $@9 lista_expresiones PARDER

    CORIZQ  desplazar e ir al estado 81
    PARIZQ  desplazar e ir al estado 111

    $default  reduce usando la regla 34 (variable_expresion)


Estado 71

   87 expresion: constante .

    $default  reduce usando la regla 87 (expresion)


Estado 72

   61 lista_variables: variable .

    $default  reduce usando la regla 61 (lista_variables)


Estado 73

   54 sentencia_entrada: ENTRADA lista_variables . PYC
   62 lista_variables: lista_variables . COMA variable

    PYC   desplazar e ir al estado 112
    COMA  desplazar e ir al estado 113


Estado 74

   56 sentencia_retornar: DEVOLVER expresion . PYC
   72 expresion: expresion . OPMULT expresion
   73          | expresion . OPDIV expresion
   74          | expresion . OPMULTM expresion
   75          | expresion . OPAND expresion
   76          | expresion . OPOR expresion
   77          | expresion . OPEQ expresion
   78          | expresion . OPNEQ expresion
   79          | expresion . OPLEQ expresion
   80          | expresion . OPGEQ expresion
   81          | expresion . OPLESS expresion
   82          | expresion . OPGR expresion
   83          | expresion . OPMOD expresion
   84          | expresion . OPSUMA expresion
   85          | expresion . OPRESTA expresion

    OPOR     desplazar e ir al estado 97
    OPAND    desplazar e ir al estado 98
    OPEQ     desplazar e ir al estado 99
    OPNEQ    desplazar e ir al estado 100
    OPLEQ    desplazar e ir al estado 101
    OPGEQ    desplazar e ir al estado 102
    OPLESS   desplazar e ir al estado 103
    OPGR     desplazar e ir al estado 104
    OPSUMA   desplazar e ir al estado 105
    OPRESTA  desplazar e ir al estado 106
    OPMULT   desplazar e ir al estado 107
    OPMULTM  desplazar e ir al estado 108
    OPDIV    desplazar e ir al estado 109
    OPMOD    desplazar e ir al estado 110
    PYC      desplazar e ir al estado 114


Estado 75

   10 Declar_subprog: $@4 Cabecera_subprog . $@5 bloque

    $default  reduce usando la regla 9 ($@5)

    $@5  ir al estado 115


Estado 76

   23 Cabecera_subprog: tipo . variable PARIZQ argumentos PARDER
   24                 | tipo . variable PARIZQ PARDER

    IDEN  desplazar e ir al estado 25

    variable                ir al estado 116
    elemento_de_array_decl  ir al estado 49
    identificador           ir al estado 51


Estado 77

   48 sentencia_asignacion: variable_expresion ASIG . expresion PYC

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63

    variable_expresion  ir al estado 64
    elemento_de_array   ir al estado 36
    expresion           ir al estado 117
    funcion             ir al estado 68
    identificador       ir al estado 70
    constante           ir al estado 71


Estado 78

   17 Fin_de_bloque: LLADER .

    $default  reduce usando la regla 17 (Fin_de_bloque)


Estado 79

    5 bloque: Inicio_de_bloque $@2 Declar_de_variables_locales $@3 Declar_subprogs Sentencias Fin_de_bloque .

    $default  reduce usando la regla 5 (bloque)


Estado 80

   38 Sentencias: Sentencias Sentencia .

    $default  reduce usando la regla 38 (Sentencias)


Estado 81

   36 elemento_de_array: identificador CORIZQ . expresion CORDER
   37                  | identificador CORIZQ . expresion COMA expresion CORDER

    error     desplazar e ir al estado 55
    OPSUMA    desplazar e ir al estado 56
    OPRESTA   desplazar e ir al estado 57
    OPNEG     desplazar e ir al estado 58
    CONST     desplazar e ir al estado 59
    CONSTENT  desplazar e ir al estado 60
    IDEN      desplazar e ir al estado 25
    CORIZQ    desplazar e ir al estado 62
    PARIZQ    desplazar e ir al estado 63
